correction in footer for overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -884,6 +884,7 @@ h2 {
 footer {
   /* border: 1px solid orange; */
   margin-top: -50px;
+  overflow: hidden;
 }
 .footerTop {
   /* border: 1px solid black; */
